dist/LineScript-win64-20260616/tests/cases/compile_fail/throws_contract_missing.lsc
may_fail() -> i64 throws IOError do
  return 1
end

main() -> i64 do
  return may_fail()
end
